--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@exponent/ex-navigation": "^2.7.1",
+    "axios": "^0.15.3",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "geolib": "^2.0.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
-    "react-native-button": "^1.7.1"
+    "react-native-button": "^1.7.1",
+    "react-native-maps": "^0.12.4"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
