--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "geolib": "^2.0.22",
     "react": "15.4.2",
     "react-native": "0.40.0",
+    "react-native-autolink": "^0.10.0",
     "react-native-button": "^1.7.1",
     "react-native-maps": "^0.12.4"
   },
