--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.15.3",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "geolib": "^2.0.22",
+    "lodash": "^4.17.4",
     "react": "15.4.2",
     "react-native": "0.39.2",
     "react-native-autolink": "^0.10.0",
